--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white">
 
 
@@ -11,7 +12,10 @@
         android:layout_alignParentTop="true"
         android:background="@android:color/white">
 
-        <ImageView
+
+
+        <com.facebook.login.widget.ProfilePictureView
+
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_alignParentLeft="true"
@@ -21,7 +25,7 @@
             android:layout_marginStart="20dp"
             android:scaleType="fitCenter"
             android:src="@drawable/defaultprofile"
-            android:id="@+id/imageView2" />
+            android:id="@+id/profilepictureslide" />
 
         <TextView
             android:id="@+id/textview_id"
@@ -42,13 +46,13 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="11dp"
             android:layout_marginStart="11dp"
-            android:layout_toEndOf="@+id/imageView2"
-            android:layout_toRightOf="@+id/imageView2"
+            android:layout_toEndOf="@+id/profilepictureslide"
+            android:layout_toRightOf="@+id/profilepictureslide"
             android:text="Name :"
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/textValueID"
+            android:id="@+id/textValuename"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
@@ -59,7 +63,7 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/textValuename"
+            android:id="@+id/textValueID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
