--- a/app/src/main/res/layout/activity_helpactivity.xml
+++ b/app/src/main/res/layout/activity_helpactivity.xml
@@ -30,9 +30,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:background="#80000000"
-            android:layout_marginTop="1dp">
+            android:layout_marginTop="1dp"
+            android:text="FAQS">
 
             <TextView
                 android:id="@+id/textView6"
@@ -49,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:background="#80000000"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="1dp">
@@ -68,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:background="#80000000"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="1dp">
@@ -87,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:background="#80000000"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="1dp">
@@ -103,7 +104,7 @@
 
         <LinearLayout
             android:id="@+id/howtobtn"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
