--- a/app/src/main/res/layout/fragment_timetracking.xml
+++ b/app/src/main/res/layout/fragment_timetracking.xml
@@ -1,133 +1,116 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    >
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <ScrollView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
-            android:orientation="vertical">
+        <TextView
 
-            <TextView
+            android:id="@+id/textView25"
+            android:layout_width="wrap_content"
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time Tracking"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                android:text="Time Tracking"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:layout_marginBottom="10dp"
-                />
-            <TextView
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="250dp"
+            android:layout_height="350dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/border"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="Global Catalogue of Microorganism"
-                android:layout_marginLeft="10dp"/>
-            <LinearLayout
+            <ScrollView
+                android:id="@+id/scrollView3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_height="match_parent">
 
-                >
-                <RelativeLayout
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/titleTr"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right" >
+                    android:layout_height="wrap_content">
 
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="40dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
-                    <TextView
-                        android:id="@+id/gcm"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        <TableRow
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center">
 
-                        android:textSize="16sp"
-                        android:textColor="#1e90ff"
+                            <TextView
+                                android:id="@+id/textView22"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
 
-                        android:text="BCC"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginBottom="10dp"/>
-                </RelativeLayout>
+                            <TextView
+                                android:id="@+id/textView21"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        </TableRow>
 
-            </LinearLayout>
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
 
-            <TextView
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="PubMed.gov"
-                android:layout_marginLeft="10dp"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </TableLayout>
+                </android.support.constraint.ConstraintLayout>
+            </ScrollView>
+        </FrameLayout>
 
-                >
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right" >
+        <ImageButton
+            android:id="@+id/btnTimeCreate"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginTop="92dp"
+            android:background="@drawable/circle_button1"
+            android:src="@drawable/farmacia_online1"
+            android:text="Button"
+            app:layout_constraintStart_toEndOf="@+id/btnTimeSumma"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
+        <ImageButton
+            android:id="@+id/btnTimeSumma"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="107dp"
+            android:layout_marginTop="92dp"
+            android:background="@drawable/circle_button1"
+            android:src="@drawable/barchart"
+            android:text="Button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
-                    <TextView
-                        android:id="@+id/pub"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:textSize="16sp"
-                        android:textColor="#1e90ff"
-                        android:text="BCC"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginBottom="10dp"/>
-                </RelativeLayout>
-
-            </LinearLayout>
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="NCBI"
-                android:layout_marginLeft="10dp"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-
-                >
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right" >
-
-
-                    <TextView
-                        android:id="@+id/ncbi"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:textSize="16sp"
-                        android:textColor="#1e90ff"
-
-                        android:text="BCC"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginBottom="10dp"/>
-                </RelativeLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+    </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
